Connected Engine to WPFUI
instantiated GameSession to MainWindow()

(gamesession creates player object)

--- a/SOSCSRPG/WPFUI/WPFUI.csproj
+++ b/SOSCSRPG/WPFUI/WPFUI.csproj
@@ -94,5 +94,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Engine\Engine.csproj">
+      <Project>{4d9a7726-f62a-4563-ba00-92f8b032e19f}</Project>
+      <Name>Engine</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
