--- a/SOSCSRPG/Engine/Engine.csproj
+++ b/SOSCSRPG/Engine/Engine.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Models\Weapon.cs" />
     <Compile Include="Models\World.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RandomNumberGenerator.cs" />
     <Compile Include="ViewModels\GameSession.cs" />
   </ItemGroup>
   <ItemGroup />
